[package]
name = "crossword_generator"
version = "0.0.1"
edition = "2021"
authors = ["Hayk Khachatryan"]
description = "A library for generating crossword from provided words"
license = "MIT"
repository = "https://github.com/Hayk10002/crossword_generator.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
itertools = "0.12.1"
trait-set = "0.3.0"
thiserror = "1.0.58"
tokio-stream = "0.1.15"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"]}
async-recursion = "1.1.0"
async_fn_traits = "0.1.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false